--- a/.github/workflows/terraform-service-apply.yml
+++ b/.github/workflows/terraform-service-apply.yml
@@ -43,5 +43,5 @@ jobs:
 
       - run: terraform fmt -check -recursive
       - run: terraform init -upgrade
-      - run: terraform vaply -auto-approve
+      - run: terraform apply -auto-approve
 
